# KML-LVISA

./: .editorconfig  .gitignore  KML-LVISA.xmind  README.md  main.py  pyproject.toml  run.sh
archive/3LTR_VAL_57BP/: 3LTR.fa  3LTR.fa.nin  3LTR.fa.njs  3LTR.fa.nsq
archive/3LTR_igtk_16bp/: 3LTR.fa.nin  3LTR.fa.njs  3LTR.fa.nsq
archive/3LTR_igtk_25bp/: 3LTR.fa
archive/scripts/: get_fastq_header_from_blast.py  rules_anno.smk
assets/3LTR/: 3LTR.fa.nin  3LTR.fa.njs  3LTR.fa.nsq
assets/3LTR_igtk_16bp/: 3LTR.fa
assets/3LTR_igtk_25bp/: 3LTR.fa.nhr  (+1 more)
config/: conda_env.yaml  database.yaml  software.yaml
deprecated/: scripts_annotate_effect.py  scripts_filter_and_stat_is_by_coverage.py  scripts_filter_umi_bam.py
kml_lvisa/: __init__.py  config.py  fastq.py  snakemake.py
scripts/: CMplot.R  annotate_effect.py  annotate_fullname.py  annotate_oncokb.py  annotate_qc.py  chromosome_distribute.R  chromosome_distribute_barplot.py  combine_annotation.py  effect_pie.py  fastp_all_samples_qc.py  filter_and_stat_is_by_coverage.py  filter_umi_bam.py  filter_umi_raw_bed.py  generate_anno_control.py  get_fastq_header_from_blast.py  hg19.cytoBand.overlaid.RData  hg19.fa.comp  is_diversity.R  merge_umi_bed.py  reclass_pie.py  summary_cpg_tss.py  top10_is.py  total_effect_stats.py  total_onco_stats.py  total_repeat.stats.py  total_repeat_stats.py
templates/: input.tsv  input.txt  run.sh  snakemake.yaml
tests/: input.txt  run.sh  summary_diversity.py  test_config.py  test_fastq.py  test_snakemake.py
utils/: prepare_input_from_bcl2fastq_out.py
wf-lvisa/: Snakefile
(+36 files in other folders)
