[tool.poetry]
name = "kml-lvisa"
version = "0.2.1"
description = ""
authors = ["kristoff <706060951@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
click = "^8.1.7"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pysam = "^0.22.1"
levenshtein = "^0.26.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/test_fastq.py",
    "tests/test_config.py",
    "tests/test_snakemake.py",
]
